--- a/Index.html
+++ b/Index.html
@@ -29,55 +29,57 @@
         </div>
         <div class="passo" id="passo-3">
             <p>Você ganha uma recompens por entrgar a pedra</p>
-            <button class="btn-proximo" data-proximo="7">voltar a casa</button>
+            <button class="btn-proximo" data-proximo="7">tentar roubar a pedra</button>
+            <button class="btn-proximo" data-proximo="12">ficar feliz com a recompensa </button>
         </div>
 
         <div class="passo" id="passo-4">
             <p>você foi descoberto</p>
-            <button class="btn-proximo" data-proximo="8"></button>
+            <button class="btn-proximo" data-proximo="8">se entrega</button>
+            <button class="btn-proximo" data-proximo="9">foje</button>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="9">Viajar para o Amazonas</button>
+            <p>na Hora de desintera-la você se corta na pedra</p>
+            <button class="btn-proximo" data-proximo="11">ignora e dorme</button>
+            <button class="btn-proximo" data-proximo="10">vai ao hospital</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="10">Voltar e explorar as igrejas</button>
+            <p>Vacê largou a pedra</p>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>Voutando para casa você percebe que você se cortou na pedra</p>
+            <p>Você tenta rouba-la mais ja te encontram mais você c=se corta na pedra, você conseguiu enganar os soldados britanicos e votou para casa oque vocẽ vai fazer com o corte</p>
             <button class="btn-proximo" data-proximo="11">Ignorar </button>
-            <button class="btn-proximo" data-proximo="12">ir ao hospital</button>
+            <button class="btn-proximo" data-proximo="10">ir ao hospital</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="13">Seguir para o Amazonas</button>
+            <p>eles agradegem apenas</p>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="14">Explorar a cidade perdida</button>
+            <p>correndo a pedra faz um corte em voce</p>
+            <button class="btn-proximo" data-proximo="11">ignorar</button>
+            <button class="btn-proximo" data-proximo="10">ir ao hospital</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="15">ele tratam do ferimento e vc fica bem</button>
+            <p>Você foi ao hospital.</p>
+            <button class="btn-proximo" data-proximo="12">ele tratam do ferimento e vc fica bem</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>/p>
+            <p>Você se sente estranho</p>
+            <button class="btn-proximo" data-proximo="13">dormir</button>
         </div>
 
         <div class="passo" id="passo-12">
             <p>você volta para casa e descansa</p>
+        </div>
+        <div class="passo" id="passo-13">
+            <p>Você acorda com poderes e vive combatendo o crime</p>
         </div>
     </main>
     <script src="script.js"></script>
