--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,73 +8,87 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>A Pedra</title>
+    <title>Em busca da nota perfeita</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, um menino encontrou uma pedra verde brilhante.</p>
-            <button class="btn-proximo" data-proximo="1">Pegar a Pedra</button>
-            <button class="btn-proximo" data-proximo="2">esconder a pedra</button>
+            <p>Um dia desses, em um colegio uma aluno precisava tirar 10 para passar de ano </p>
+            <button class="btn-proximo" data-proximo="1">fazer tudo e prestar a atenção</button>
+            <button class="btn-proximo" data-proximo="2">ingnorar as aulas</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>a pedra é radioativa e o governo britanico está atras dela</p>
-            <button class="btn-proximo" data-proximo="3">Entrega-la as autoridades</button>
-            <button class="btn-proximo" data-proximo="4">esconder e ficar com a pedra</button>
+            <p>você começa a estudar bastante e acerter tudo nas aulas</p>
+            <button class="btn-proximo" data-proximo="3">continuar e se esforçar mais</button>
+            <button class="btn-proximo" data-proximo="4">parar de estudar</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Você a esconde e volta para casa</p>
-            <button class="btn-proximo" data-proximo="5">você fica curioso e volta buscar-la</button>
-            <button class="btn-proximo" data-proximo="6">largar a pedra</button>
+            <p>você começa a ignorar as aulas e </p>
+            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
+            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>Você ganha uma recompens por entrgar a pedra</p>
-            <button class="btn-proximo" data-proximo="7">tentar roubar a pedra</button>
-            <button class="btn-proximo" data-proximo="12">ficar feliz com a recompensa </button>
+            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
+                localizada no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
 
         <div class="passo" id="passo-4">
-            <p>você foi descoberto</p>
-            <button class="btn-proximo" data-proximo="8">se entrega</button>
-            <button class="btn-proximo" data-proximo="9">foje</button>
+            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
+                encontrado.</p>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>na Hora de desintera-la você se corta na pedra</p>
-            <button class="btn-proximo" data-proximo="11">ignora e dorme</button>
-            <button class="btn-proximo" data-proximo="10">vai ao hospital</button>
+            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
+                pista está no Amazonas.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Vacê largou a pedra</p>
+            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
+            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>Você tenta rouba-la mais ja te encontram mais você c=se corta na pedra, você conseguiu enganar os soldados britanicos e votou para casa oque vocẽ vai fazer com o corte</p>
-            <button class="btn-proximo" data-proximo="11">Ignorar </button>
-            <button class="btn-proximo" data-proximo="10">ir ao hospital</button>
+            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
+            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>eles agradegem apenas</p>
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>correndo a pedra faz um corte em voce</p>
-            <button class="btn-proximo" data-proximo="11">ignorar</button>
-            <button class="btn-proximo" data-proximo="10">ir ao hospital</button>
+            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
+                cidade perdida.</p>
+            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>Você foi ao hospital.</p>
-            <button class="btn-proximo" data-proximo="12">ele tratam do ferimento e vc fica bem</button>
+            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
+                aqui.</p>
+            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <p>Você se sente estranho</p>
-            <button class="btn-proximo" data-proximo="13">dormir</button>
+            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
+            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
+                este lugar</p>
         </div>
+
+        <div class="passo" id="passo-12">
+            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
+                que levam à cidade perdida.</p>
+            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
 
         <div class="passo" id="passo-12">
             <p>você volta para casa e descansa</p>
