--- a/Index.html
+++ b/Index.html
@@ -24,79 +24,63 @@
             <button class="btn-proximo" data-proximo="4">parar de estudar</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>você começa a ignorar as aulas e </p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>você começa a ignorar as aulas e vê que ta indo mal</p>
+            <button class="btn-proximo" data-proximo="5">estudar mais</button>
+            <button class="btn-proximo" data-proximo="6">prestar muita atenção e estudar</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>você esta se esforçando para estudar e seu professor te elogia</p>
+            <button class="btn-proximo" data-proximo="7">seguir estudando e se esforçando</button>
         </div>
 
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <p>você reprova de ano e sua mae te deserda</p>
         </div>
 
-        <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+        <div cl.ass="passo" id="passo-5">
+            <p>estudando seu professor te elogia e disse que você gabaritou um trabalho e que você esta no caminho certo. </p>
+            <button class="btn-proximo" data-proximo="7">Seguir estudando e se esforçando</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p> quando você tava estudando, recebe a noticia que sua avó morreu e fica muito abalado </p>
+            <button class="btn-proximo" data-proximo="8">continuar estudando mesmo assim</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>seguindo estudando você consegue gabaritar 2 dos 3 trabalhos</p>
+            <button class="btn-proximo" data-proximo="9">dar um descanso</button>
+            <button class="btn-proximo" data-proximo="10">passar a noite em claro estudando</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Seu professor te elogia/p>
+            <button class="btn-proximo" data-proximo="7">Seguir estudando e se esforçando</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>você descansa a mente e percebe que esta mais focado você vai para escola bem focado e consegue gabaritar o trabalho e passar de ano</p>
+            <button class="btn-proximo" data-proximo="11">comemorar com uma festa</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>você fica a noite acordado estudando e quando você ta indo para a escola você dorme no onibus e acorda desesperado</p>
+            <button class="btn-proximo" data-proximo="12">vai correndo e pega um uber </button>
         </div>
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>sua mae fica muito feliz e da um celular novo para você e a festa é um sucesso todos presentes estão feliz pela noticia</p>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>chegando la você consegue chegar a tempo e tira nota maxima </p>
+            <button class="btn-proximo" data-proximo="11">Descansar e depois fazer uma festa de comomeração</button>
         </div>
     </main>
     <script src="script.js"></script>
 </body>
 </html>
 
-        <div class="passo" id="passo-12">
-            <p>você volta para casa e descansa</p>
-        </div>
-        <div class="passo" id="passo-13">
-            <p>Você acorda com poderes e vive combatendo o crime</p>
-        </div>
-    </main>
-    <script src="script.js"></script>
-</body>
-</html>
+      
