--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>você reprova de ano e sua mae te deserda</p>
+            <p>você reprova de ano e sua mae te deserda e você morre de fome</p>
         </div>
 
         <div cl.ass="passo" id="passo-5">
